# PolicyRS

./: .gitignore  README.md
policy/: Cargo.toml
policy/book/: book.toml
policy/book/src/: AQ.md  README.md  SUMMARY.md
policy/book/src/did/: policy.md
policy/book/src/policy/: policy-ml.md
policy/book/src/rewrite/: data_model.md  rewrite.md  sorts.md  (+1 more)
policy/polly/: Cargo.toml
policy/polly/src/: main.rs  subcommand_new.rs  subcommand_run.rs
policy/rewrite/: Cargo.toml  build.rs
policy/rewrite/src/: lib.rs
policy/rewrite/src/data/: mod.rs  sort.rs  uri.rs
policy/rewrite/src/machine/: comm.rs  docket.rs  mod.rs  resolver.rs  rewrite_machine.rs
policy/rewrite/src/machine/sorts/: mod.rs  sort_application.rs  sort_as.rs  sort_cell.rs  sort_cell_get.rs  sort_cell_set.rs  sort_dereference.rs  sort_eval.rs  sort_fix.rs  sort_function.rs  sort_if.rs  sort_let.rs  sort_list.rs  sort_lookup.rs  sort_loop.rs  sort_map.rs  sort_match.rs  sort_policy.rs  sort_receive.rs  sort_send.rs  sort_sequence.rs  sort_set.rs  sort_try.rs  sort_tuple.rs
policy/rewrite/src/machine/uniform/: comparison.rs  did.rs  double.rs  integer.rs  map.rs  math.rs  mod.rs  string.rs
policy/rewrite/src/parse/: actions.rs  export.rs  grammar.lalrpop  grammar.rs  lexer.rs  mod.rs
policy/tests/: Cargo.toml
policy/tests/didcomm_tests/: main.rs
policy/tests/didcomm_tests/docket_ping/: receiver.policy  sender.policy
policy/tests/tapl_tests/: main.rs  tapl_common.rs  tapl_parse.rs  tapl_rewrite.rs
policy/tests/uniform_tests/: main.rs
policy/tests/uniform_tests/docket_std/: math.pol
(+23 files in other folders)
