[package]
name = "rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
rpds = "1.1.0"
digest = "0.10.0"
sha2 = "0.10.8"
base64 = "0.22.1"
serde = "1.0.215"
serde_json = "1.0.133"
logos = "0.15.0"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }

[dependencies.uuid]
version = "1.16.0"
features = [ "v4",]

[build-dependencies]
lalrpop = { version = "0.22.1", default-features = false }
