[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rpds = "1.1.0"

[dev-dependencies]
rewrite = { path = "../rewrite" }
tempdir = "0.3.7"

[[test]]
name = "tapl_tests"
path = "tapl_tests/main.rs"

[[test]]
name = "didcomm_tests"
path = "didcomm_tests/main.rs"

[[test]]
name = "uniform_tests"
path = "uniform_tests/main.rs"
